account-manager/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: account-manager
  labels:
    pod-security.kubernetes.io/enforce: restricted
