account-manager/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-manager
spec:
  selector:
    app: account-manager
  ports:
    - name: http
      port: 80
      targetPort: http
